# Engine397

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  notes.txt
GameScripts/: FSM.lua  FSMTesting.lua  FSMTesting2.lua  GameConfig.lua  GameInitialisation.lua  GameManager.lua  HugoTest.lua  SampleFSMfromGPT.lua  TerrainConfig_fractal.lua  TerrainConfig_heightmap.lua  TerrainConfig_mult_tex_heightmap.lua  TerrainConfig_tex_fractal.lua  TerrainConfig_tex_heightmap.lua  asset_paths.config  test_script_01.lua
source/: CMakeLists.txt  StuffThatNeedsToBeLoadedInLua.h  main.cpp
source/Engine/Actors/: Camera.cpp  Camera.h  Material.cpp  Material.h  MaterialData.h  Mesh.cpp  Mesh.h  MeshData.h  ModelData.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
source/Engine/Actors/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
source/Engine/Components/: AIScriptComponent.h  CameraComponent.h  CollidableComponent.h  DataTypes.h  EnemyComponent.h  MaterialComponent.h  MeshComponent.h  NameComponent.h  PlayerControllerComponent.h  RenderableComponent.h  SkyboxComponent.h  TransformComponent.h
source/Engine/Components/CollisionComponents/: BoxColliderComponent.h  CapsuleColliderComponent.h  CollidableComponent.h  SphereColliderComponent.h
source/Engine/Entity/: EntityBuilder.cpp  EntityBuilder.h
source/Engine/Factorys/: EntityFactory.cpp  EntityFactory.h  RendererFactory.h  TextureFactory.cpp  TextureFactory.h
source/Engine/GUI/: HUDElement.cpp  HUDElement.h  HUDSystem.cpp  HUDSystem.h  ImGui_UI.cpp  ImGui_UI.h
source/Engine/Importers/: AssimpImporter.cpp  AssimpImporter.h  AssimpImporterFacade.cpp  AssimpImporterFacade.h  ModelLoader.cpp  ModelLoader.h
source/Engine/Interfaces/: ICubeMap.h  IDataBuffer.h  IGui.h  IMeshBuffer.h  IRenderer.h  IShader.h  ITexture.h  IWindow.h
source/Engine/Math/: IMath.h  Math.cpp  Math.h
source/Engine/OpenGL/: OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLMeshBuffer.cpp  OpenGLMeshBuffer.h  OpenGLQuadBuffer.cpp  OpenGLQuadBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShadowMapBuffer.cpp  OpenGLShadowMapBuffer.h
source/Engine/Physics_DEPRECIATED/: BoxCollider.cpp  BoxCollider.h  Collision.cpp  Collision.h  DebugColliderRenderer.cpp  DebugColliderRenderer.h  Octree.cpp  Octree.h  PhysicsWorld.cpp  PhysicsWorld.h  SphereCollider.cpp  SphereCollider.h  TankCollision.cpp  TankCollision.h
source/Engine/Renderer/: Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  ShadowMap.cpp  ShadowMap.h
source/Engine/ResourceManagement/: AssetRegistry.cpp  AssetRegistry.h  EnttECS.cpp  EnttECS.h  EnttFacade.cpp  EnttFacade.h  GameState.h  IEntityComponentSystem.h  InputState.h  NewScene.cpp  NewScene.h  PrototypeRegistry.cpp  PrototypeRegistry.h  Scene.cpp  Scene.h
source/Engine/Scripting/: EnemyScriptController.cpp  EnemyScriptController.h  LuaManager.cpp  LuaManager.h  LuaTest.cpp  ScriptController.cpp  ScriptController.h  ScriptManager.h
source/Engine/Shaders/: Frag.glsl  HUD.frag  HUD.vert  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  WaterFrag.glsl  WaterVert.glsl  debug_fs.glsl  debug_vs.glsl  framebuffer.frag  framebuffer.vert  new_fragment.glsl  new_vertex.glsl
source/Engine/Systems/: CameraSystem.cpp  CameraSystem.h  EnemyActionSystem.cpp  EnemyActionSystem.h  EnemyScriptSystem.cpp  EnemyScriptSystem.h  EventSystem.h  GameStateSystem.cpp  GameStateSystem.h  GridCollision.cpp  GridCollision.h  InputManager.cpp  InputManager.h
source/Engine/Terrain/: FractalTerrain.cpp  FractalTerrain.h  HeightmapTerrain.cpp  HeightmapTerrain.h  Terrain.cpp  Terrain.h  TerrainFactory.cpp  TerrainFactory.h  TerrainMenuHelper.cpp  TerrainMenuHelper.h  TerrainMultiTexture.cpp  TerrainMultiTexture.h  TerrainTexture.cpp  TerrainTexture.h  TerrainType.h
source/Engine/Texture/: ImageData.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  TextureManager.cpp  TextureManager.h
source/Engine/Texture/OpenGL/: OGL_CubeMap.cpp  OGL_CubeMap.h  OGL_Texture.cpp  OGL_Texture.h
source/Engine/Utility/: FileHandler.cpp  FileHandler.h
source/Engine/Water/: Water.cpp  Water.h
source/Engine/Window/: glfwWindow.cpp  glfwWindow.h
